--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,11 +1,20 @@
+.Nav {
+    line-height: 1.5;
+    vertical-align: middle;
+  }
+  
+
 .NavBar {
     font-size: 1rem;
+    padding: .5rem;
+    vertical-align: middle;
 }
 
 .NavBar a {
     color: #333333;
     text-decoration: none; 
     transition: color 0.3s ease;
+    vertical-align: middle;
 }
 
 .NavBar a:hover {
