like and unlike functionality works but with no graphics currently

--- a/src/styles/Review.module.css
+++ b/src/styles/Review.module.css
@@ -1,8 +1,14 @@
 .Review {
-    margin-bottom: 20px;
+    margin-top: 5rem;
+    margin-bottom: 2rem;
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    width: 70%;
+}
+
+.card-img {
+    max-width: 20rem;
 }
 
 .ReviewBar {
