--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,13 @@
+/* colors: 
+Background: #F3F3F4 or #F5F5F5
+Text: #372E32 or #333333
+Buttons: #C28E4E or #FFC107
+Hover:           or   #4CAF50
+
+ */
+
+
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,7 +18,8 @@
     font-size: 62.5% !important;
     font-family: 'Montserrat', sans-serif;
     min-height: 100vh;
-    background-color: #f4f1ea;
+    background-color: #F5F5F5;
+    color: #333333;
 }
 
 .Main {
