Added styles to about us page

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,9 @@
 /* colors: 
 Background: #F2E6D3
 Text: #333333
-Buttons: #C28E4E or #FFC107
+Buttons: #BO7D28
 Hover:  underline: #DACBBB color:#444444
+Accents: #15DBDB 
 
  */
 
