--- a/src/styles/AboutUs.module.css
+++ b/src/styles/AboutUs.module.css
@@ -1,10 +1,54 @@
-.container {
-    padding: 20px;
-    max-width: 800px;
+.arrow-divider {
+    width: 0;
+    height: 0;
     margin: 0 auto;
+    display: block;
+    margin-bottom: 2rem;
+  }
+  
+  /* Up arrow */
+  .arrow-divider::before {
+    content: '';
+    border-style: solid;
+    border-width: 0 15px 20px 15px;
+    border-color: transparent transparent #B07d28 transparent;
+    
+  }
+
+.container {
+    padding: 2rem;
+    max-width: 80rem;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 h2 {
-    font-size: 28px;
-    margin-bottom: 20px;
+    font-size: 3rem;
+    margin-bottom: 2rem;
+}
+
+h4 {
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+}
+
+p {
+    font-size: 1.5rem;
+    margin-top: 2rem;
+}
+
+ul {
+    margin-top: 2rem;
+}
+
+ul li {
+    font-size: 1.2rem;
+    list-style: square;
+}
+
+ul li a {
+    color: #15DBDB;
 }
