--- a/src/styles/BookOfTheWeek.module.css
+++ b/src/styles/BookOfTheWeek.module.css
@@ -1,3 +1,33 @@
+.arrow-divider {
+  width: 0;
+  height: 0;
+  margin: 0 auto;
+  margin-top: 1rem;
+  display: block;
+}
 
-
+/* Up arrow */
+.arrow-divider::before {
+  content: '';
+  border-style: solid;
+  border-width: 0 15px 20px 15px;
+  border-color: transparent transparent #B07d28 transparent;
   
+}
+
+.bookOfTheWeekContainer h2 {
+  margin-top: 4rem;
+  font-size: 3.5rem;
+  text-align: center;
+  font-weight: 600;
+}
+
+.bookOfTheWeekContainer h3 {
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.bookOfTheWeekContainer p {
+    font-size: 1.5rem;
+    text-align: center;
+}
