--- a/src/styles/Avatar.module.css
+++ b/src/styles/Avatar.module.css
@@ -1,7 +1,7 @@
 .Avatar {
-    border-radius: 50%;
+    border-radius: 10%;
     margin: 0px 8px 0px 8px;
     object-fit: cover;
-    border: 2px solid #2142b2;
+    border: 2px solid #F2E6D3;
   }
   
