Styles added to popular profiles list

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,7 +1,7 @@
 /* colors: 
 Background: #F2E6D3
 Text: #333333
-Buttons: #BO7D28
+Buttons: #B07D28
 Hover:  underline: #DACBBB color:#444444
 Accents: #15DBDB 
 
