--- a/src/styles/Review.module.css
+++ b/src/styles/Review.module.css
@@ -19,7 +19,7 @@
 
 .Review .review-title.card-title.h5 {
     font-weight: 600 !important;
-    font-size: 4rem !;
+    font-size: 4rem !important;
 }
 
 
