--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -1,6 +1,6 @@
 .ProfileContainer {
     border: 1px solid #ddd;
-    padding: 10px;
+    padding: 1rem;
     border-radius: 5px;
     margin: 10px 0;
   }
@@ -14,22 +14,34 @@
     align-items: center;
   }
   
-  .UserName {
+  .username {
     margin-left: 10px;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 1.5rem;
+    font-weight: 500;
   }
   
   .FollowButton {
     margin-left: auto;
     padding: 5px 10px;
-    background-color: #007bff;
     color: white;
     border: none;
     border-radius: 5px;
   }
   
   .FollowButton:hover {
-    background-color: #0056b3;
+    background-color: #444444 !important;
   }
+
+  .fixedWidthButton {
+    width: 100px;  
+    text-align: center;
+}
+
+.stretchedTextButton {
+  display: flex;
+  justify-content: space-evenly;
+  padding-left: 10px;  
+  padding-right: 10px; 
+}
+
   
