--- a/src/styles/Profile.module.css
+++ b/src/styles/Profile.module.css
@@ -3,6 +3,7 @@
     padding: 1rem;
     border-radius: 5px;
     margin: 10px 0;
+    background-color: rgba(255, 255, 255, 0.8);
   }
   
   .WordBreak {
