--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -1,8 +1,9 @@
 .ProfileImage {
     object-fit: cover;
-    height: 120px;
-    width: 120px;
+    max-height: 15rem;
     margin: 4px;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
   }
   
   @media screen and (max-width: 991px) {
