Added classes and styles to userpasswordform. Added a profileedit.module.css to take care of styles for profile edit form, username form, and userpassword form

--- a/src/styles/ProfileEditForm.module.css
+++ b/src/styles/ProfileEditForm.module.css
@@ -5,3 +5,15 @@
 .customButtonClass2, .customButtonClass1 {
     margin-top: 1.5rem !important;
 }
+
+.bioLabel, .username, .newPassword {
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: #333;
+    margin-bottom: 0.5rem;
+}
+
+.newPassword {
+    margin-top: 1rem;
+}
+
