Added classes and styles to the review edits, profile edits

--- a/src/styles/Review.module.css
+++ b/src/styles/Review.module.css
@@ -59,3 +59,17 @@
     font-size: 4rem;
 }
 
+.flexContainer {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+.dateStyle {
+    font-size: 1rem;
+}
+
+.ownerStyle {
+    font-size: 1rem;
+}
