Added functionality to the openlibrary book search so that users can click on search results that will now appear as links by iterating over the results array and using the key for each book. Added styles and classes to openlibrary.js

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,8 +15,11 @@ Accents: #15DBDB
     margin: 0;
 }
 
+html {
+  font-size: 62.5% !important;
+}
+
 .App {
-    font-size: 62.5% !important;
     font-family: 'Montserrat', sans-serif;
     min-height: 100vh;
     background-color: #F2E6D3;
