--- a/src/styles/Review.module.css
+++ b/src/styles/Review.module.css
@@ -17,9 +17,10 @@
     max-width: 100%;
 }
 
-.Review .review-title.card-title.h5 {
+.cardTitle {
     font-weight: 600 !important;
-    font-size: 4rem !important;
+    font-size: 2rem !important;
+    text-align: center;
 }
 
 
