--- a/src/styles/Review.module.css
+++ b/src/styles/Review.module.css
@@ -29,17 +29,21 @@
 }
 
 .ISBN {
-    font-size: 1rem !important;
+    font-size: 1.3rem;
 }
 
 .Content {
-    font-size: 1rem !important;
+    font-size: 1.4rem;
+    line-height: 1.6;
+    max-width: 80rem;
+    margin: 0 auto;
 }
 
 .ReviewBar {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-top: 1.5rem;
 }
 
 .Heart, .HeartOutline {
@@ -52,8 +56,8 @@
     color: #ff4b6e;
 }
 
-.ReviewBar .fa-heart {
-    font-size: 4rem !important;
+.ReviewBar i {
+    font-size: 1.5rem;
 }
 
 .ReviewBar .fa-comments {
@@ -68,9 +72,13 @@
 }
 
 .dateStyle {
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 .ownerStyle {
-    font-size: 1rem;
+    font-size: 1.5rem;
+}
+
+.iconCount {
+    font-size: 1.5rem;
 }
