--- a/src/styles/AboutUs.module.css
+++ b/src/styles/AboutUs.module.css
@@ -23,11 +23,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 h2 {
     font-size: 3rem;
     margin-bottom: 2rem;
+    font-weight: bold;
 }
 
 h4 {
@@ -53,10 +55,12 @@ p {
 
 ul {
     margin-top: 2rem;
+    text-align: left;
+    max-width: 65%;
 }
 
 ul li {
-    font-size: 1.2rem;
+    font-size: 2rem;
     list-style: square;
 }
 
