--- a/src/styles/Comment.module.css
+++ b/src/styles/Comment.module.css
@@ -1,10 +1,19 @@
 .Owner {
-    font-weight: bold;
-    color: #2142b2;
+    font-size: 1.5rem;
+    color: #333333;
     margin-right: .8rem;
   }
   
   .Date {
-    font-weight: lighter;
-    color: #c1c1c5;
+    color: #333333;
   }
+  
+  .commentContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.moreDropdown {
+    align-self: center;
+}
