--- a/src/styles/OpenLibrarySearch.module.css
+++ b/src/styles/OpenLibrarySearch.module.css
@@ -5,9 +5,13 @@
 }
 
 .searchHeader {
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     margin-bottom: 1rem;
-    color: #333;
+    color: #444444;
+}
+
+.descriptionText {
+    font-size: 1.5rem;
 }
 
 .searchInput {
