--- a/src/styles/NYTReviews.module.css
+++ b/src/styles/NYTReviews.module.css
@@ -1,50 +1,156 @@
-/* 
-.header {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
+html {
+  font-size: 62.5% !important;
+}
+
+.App {
+    font-family: 'Montserrat', sans-serif;
+    min-height: 100vh;
+    background-color: #F2E6D3;
+    color: #333333;
+}
+
+.container {
+    display: flex;  
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.header {
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+    text-align: center;
+    color: #333;
+}
 
 .searchInput {
-    padding: 10px;
-    border: 1px solid #ccc;
+    padding: .8rem 1.2rem;
     border-radius: 4px;
-    margin-right: 10px;
+    border: 1px solid #ccc;
+    margin-right: 1rem;
+    width: 70%;
+    max-width: 30rem;
 }
 
+.searchBox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 .searchButton {
-    padding: 10px 15px;
-    background-color: #007bff;
+    padding: .8rem 1.5rem;
     border: none;
     color: white;
     border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.2s;
-
-
-    &:hover {
-        background-color: #0056b3;
-    }
+    transition: background-color 0.3s ease;
 }
 
+.searchButton:hover {
+    background-color: #444444;
+}
 
 .list {
-    margin-top: 20px;
     list-style-type: none;
+    padding: 0;
 }
-
 
 .listItem {
-    margin-bottom: 15px;
-    padding: 10px;
-    border: 1px solid #e1e1e1;
+    padding: 15px;
+    border: 2px solid #444444;
+    border-radius: 5px;
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.itemHeader {
+    font-size: 2rem;
+    color: #555;
+    margin-bottom: 10px;
+}
+
+.bookImage {
+    width: 10rem;
+    height: auto;
+    margin-bottom: 1rem;
     border-radius: 4px;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
 }
 
 
-.itemHeader {
-    font-size: 20px;
-    margin-bottom: 10px;
-} */
+.top10List {
+    list-style-type: none;
+    padding: 0;
+}
+
+.top10Item {
+    padding: 1.5rem;
+    border: 1px solid #f0f0f0;
+    border-radius: 5px;
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: background-color 0.3s ease;
+}
+
+.top10Item:hover {
+    background-color: #f9f9f9; 
+}
+
+.top10Header {
+    font-size: 2rem;
+    color: #444;
+    margin-bottom: 1rem;
+}
+
+.author {
+    font-style: italic;
+    color: #555;
+    margin: .5rem 0;
+}
+
+.description {
+    font-weight: 500;  
+    color: #333;
+    margin: .5rem 0;
+}
+
+.weeksOnList, .isbn {
+    font-size: 1.2rem; 
+    color: #777;
+    margin: .3rem 0;
+}
+
+.bookImage {
+    width: 10rem;
+    height: auto;
+    margin-bottom: 1rem;
+    border-radius: .4rem;
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
+}
+
+@media (max-width: 600px) {
+    .searchInput {
+        width: 100%;
+    }
+
+} 
+
+@media (max-width: 350px) {
+    .searchBox {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+    }
+}
