--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -1,7 +1,8 @@
 .ProfileImage {
     object-fit: cover;
     max-height: 15rem;
-    margin: 4px;
+    max-width: 15rem;
+    margin: .4rem;
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
   }
