Added media queries to various components (openlibrary results, about us, reviews, main reviews page, etc)

--- a/src/styles/AboutUs.module.css
+++ b/src/styles/AboutUs.module.css
@@ -82,7 +82,20 @@ ul li a:hover {
 }
 
 .belief-statement img {
-    width: 15rem;
+    max-width: 15rem;
     height: auto;
     object-fit: cover;
 }
+
+@media (max-width: 660px) {
+    .belief-statement img {
+        max-width: 10rem;
+    }
+}
+
+@media (max-width: 460px) {
+    .belief-statement {
+        flex-direction: column;
+    }
+}
+
