--- a/src/styles/ReviewsPage.module.css
+++ b/src/styles/ReviewsPage.module.css
@@ -16,3 +16,13 @@
   cursor: default;
   color: #5d5b53;
 }
+
+
+@media (max-width: 990px) {
+  .reviewsContainer {
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 100%; 
+  }
+}
+
