--- a/src/styles/OpenLibrarySearch.module.css
+++ b/src/styles/OpenLibrarySearch.module.css
@@ -29,6 +29,7 @@
 .searchResults {
     list-style: none;
     padding: 0;
+    max-width: 100%;
 }
 
 .searchResults li {
@@ -36,9 +37,22 @@
     padding: 1rem;
     border-radius: 5px;
     margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+ 
+.flexLinkContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 1rem;
 }
 
-.searchResults img {
+.bookCoverImage {
     max-width: 100px;
-    margin-right: 1rem;
 }
