--- a/src/styles/Review.module.css
+++ b/src/styles/Review.module.css
@@ -4,7 +4,7 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 65%;
+    max-width: 100%;
     background-color:#F5F5F5;
 }
 
