--- a/src/styles/NYTReviews.module.css
+++ b/src/styles/NYTReviews.module.css
@@ -63,7 +63,7 @@ html {
 }
 
 .listItem {
-    padding: 15px;
+    padding: 1.5rem;
     border: 2px solid #444444;
     border-radius: 5px;
     margin: 1rem 0;
@@ -90,6 +90,7 @@ html {
 .top10List {
     list-style-type: none;
     padding: 0;
+    max-width: 100%;
 }
 
 .top10Item {
@@ -123,6 +124,7 @@ html {
     font-weight: 500;  
     color: #333;
     margin: .5rem 0;
+    max-width: 60%;
 }
 
 .weeksOnList, .isbn {
