--- a/src/styles/FloatingFooterButton.module.css
+++ b/src/styles/FloatingFooterButton.module.css
@@ -1,7 +1,7 @@
 .footerButton {
     position: fixed;
     bottom: 2%;
-    right: 2%;
+    right: 5%;
     padding: 10px 20px;
     border-radius: 50px;
     background-color: #333;
@@ -12,8 +12,12 @@
     transition: background-color 0.3s;
 
     
+    @media (max-width: 1396px) {
+        bottom: 10%;
+    }
+
     @media (max-width: 768px) {
-        bottom: 5%;
+        
         right: 5%;
         padding: 8px 16px;
     }
