--- a/src/styles/ScrollUpButton.module.css
+++ b/src/styles/ScrollUpButton.module.css
@@ -1,4 +1,42 @@
-body .ScrollUpButton__Container {
-    background-color: red !important;
-    border: 3px solid yellow !important;
+.scrollButtonContainer {
+    position: fixed;
+    bottom: 10%;
+    right: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.scrollButton {
+    background-color: #ff4500;
+    color: #fff;
+    border-radius: 50%;
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2.4rem;
+    transition: opacity 0.3s, background-color 0.3s;
+    opacity: 0.8;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.scrollButton:hover {
+    opacity: 1;
+    background-color: #ff6347;
+}
+
+
+@media (max-width: 1396px) {
+    .scrollButtonContainer {
+        bottom: 15%;
+    }
+}
+
+@media (max-width: 768px) {
+    .scrollButtonContainer {
+        right: calc(5% + 40px);
+    }
 }
