Fixed bug in profile lists that prevented from profile name to be a link. Added content to readme file about colors and contrasts

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -2,7 +2,7 @@
 Background: #F2E6D3
 Text: #333333
 Buttons: #B07D28
-Hover:  underline: #DACBBB color:#444444
+Hover:  underline: #FFA500 color:#444444
 Accents: #15DBDB 
 
  */
