--- a/src/styles/FloatingFooterButton.module.css
+++ b/src/styles/FloatingFooterButton.module.css
@@ -4,14 +4,14 @@
     right: 5%;
     padding: 10px 20px;
     border-radius: 50px;
-    background-color: #333;
+    background-color: rgba(51, 51, 51, 0.5);
     color: #fff;
     border: none;
     cursor: pointer;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s;
 
-    
+}
     @media (max-width: 1396px) {
         bottom: 10%;
     }
@@ -21,7 +21,6 @@
         right: 5%;
         padding: 8px 16px;
     }
-}
 
 .footerButton:hover {
     background-color: #555;
