--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -51,3 +51,11 @@
     border-radius: 20px !important;
     height: 5rem !important;
   }
+
+  .Title {
+    font-size: 2rem;
+  }
+
+  .Body {
+    font-size: 1.5rem;
+  }
