Added styles to popularprofile component, adjusted media queries for navbar, added styles to search box

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -59,3 +59,14 @@
   .Body {
     font-size: 1.5rem;
   }
+
+  .NavLink {
+    padding: 0 .5rem;
+  }
+
+  @media (max-width: 990px) {
+    .NavBar {
+      white-space: nowrap;
+      font-size: 1rem;
+    } 
+  }
