--- a/src/styles/ReviewsPage.module.css
+++ b/src/styles/ReviewsPage.module.css
@@ -1,8 +1,10 @@
 .SearchBar input {
   border-radius: 20px;
   color: #825343;
-  padding-left: 40px;
-  margin-bottom: 16px;
+  padding: .6rem 4rem;
+  margin-bottom: 1.6rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  transition: box-shadow 0.3s ease, border-color 0.3s ease;
 }
 
 .SearchIcon {
@@ -13,10 +15,19 @@
 }
 
 .SearchIcon:hover {
-  cursor: default;
+  cursor: pointer;
   color: #5d5b53;
 }
 
+.SearchBar input:focus {
+  outline: none; 
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2); 
+  border-color: #825343; 
+}
+
+.SearchBar input::placeholder {
+  color: #333333; 
+}
 
 @media (max-width: 990px) {
   .reviewsContainer {
