--- a/src/styles/Review.module.css
+++ b/src/styles/Review.module.css
@@ -92,3 +92,21 @@
 .iconCount {
     font-size: 1.5rem;
 }
+
+.Modal {
+    background-color: #f7f7f7;
+    border-radius: 1rem;
+  }
+  
+  .ModalHeader {
+    background-color: #333;
+    color: white;
+  }
+  
+  .ModalBody {
+    padding: 2rem;
+  }
+  
+  .ModalFooter {
+    justify-content: center;
+  }
