--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -40,3 +40,10 @@
     flex-direction: column;
     justify-content: center;
   }
+
+  @media screen and (max-width: 360px) {
+    .counterContainer {
+      display: flex;
+      flex-direction: column;
+    }
+  }
